--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -47,9 +47,6 @@ default: &default
     - .jpeg
     - .jpg
 
-build:
-    <<: *default
-
 development:
   <<: *default
   compile: true
@@ -80,7 +77,7 @@ test:
   compile: true
 
   # Compile test packs to a separate directory
-  public_output_path: packs
+  public_output_path: packs-test
 
 production:
   <<: *default
